# TexGuardian

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: DEMO_SCRIPT.md  demo.tape
demo/sample_paper/: demo_paper.tex  demo_refs.bib  paper_spec.md  texguardian.yaml
demo/test_run/: README.md  demo_paper.tex  demo_refs.bib  paper_spec.md  texguardian.yaml
docs/: ARCHITECTURE.md  GUIDE.md  INSTALL.md  LAUNCH.md  RELEASE_PLAYBOOK.md  STRUCTURE.md  index.html
docs/assets/: release_animation.py
examples/esolang_paper/: esolang_bench.bib  esolang_bench_paper.tex  esolang_bench_paper_original.tex  paper_spec.md  texguardian.yaml
examples/position_paper/: figures.tex  paper_spec.md  position_paper.tex  position_paper_original.tex  references.bib  texguardian.yaml
scripts/: setup_env.sh  test_examples.py
src/texguardian/: __init__.py  __main__.py
src/texguardian/checkpoint/: __init__.py  manager.py
src/texguardian/citations/: __init__.py  validator.py
src/texguardian/cli/: __init__.py  approval.py  completers.py  main.py  repl.py
src/texguardian/cli/commands/: __init__.py  analysis.py  anonymize.py  approve.py  camera_ready.py  citations.py  compile.py  (+17 more)
src/texguardian/config/: paper_spec.py  settings.py
src/texguardian/core/: __init__.py  context.py  session.py  toolchain.py
src/texguardian/latex/: __init__.py  compiler.py  parser.py  watcher.py
src/texguardian/llm/: base.py  bedrock.py  factory.py  openrouter.py  retry.py  streaming.py
src/texguardian/patch/: __init__.py  applier.py  parser.py  validator.py
src/texguardian/safety/: __init__.py  allowlist.py  guards.py
src/texguardian/visual/: __init__.py  differ.py  renderer.py  verifier.py
templates/: paper_spec.md.template  texguardian.yaml.template
tests/: __init__.py  e2e_live_test.py
tests/integration/: __init__.py  test_all_commands_comprehensive.py  test_cli.py  test_commands_with_errors.py  test_visual_verify_loop.py
tests/unit/: __init__.py  test_anonymize.py  test_camera_ready.py  test_citation_validator.py  test_config.py  test_file_ops.py  test_latex_parser.py  test_paper_spec.py  test_patch_parser.py  test_retry.py  test_safety.py
(+8 files in other folders)
